# dr-tulu

./: README.md
agent/: .env.example  README.md  pyproject.toml
agent/dr_agent/: __init__.py  agent_interface.py  client.py  workflow.py
agent/dr_agent/dataset_utils/: load_dataset.py
agent/dr_agent/evaluation_utils/: data_types.py  load_eval_data.py
agent/dr_agent/mcp_backend/: cache.py  main.py
agent/dr_agent/mcp_backend/apis/: crawl4ai_docker_api.py  data_model.py  jina_apis.py  massive_serve_apis.py  pubmed_apis.py  reranker_apis.py  semantic_scholar_apis.py  serper_apis.py  utils.py
agent/dr_agent/mcp_backend/local/: crawl4ai_fetcher.py
agent/dr_agent/mcp_backend/local/webparsers/: webthinker.py
agent/dr_agent/shared_prompts/: __init__.py  native_tool_calling.py  native_tool_calling.yaml  unified_tool_calling.py  unified_tool_calling_cli.yaml
agent/dr_agent/tool_interface/: __init__.py  agent_as_tool.py  base.py  chained_tool.py  data_types.py  mcp_tools.py  tool_parsers.py  utils.py
agent/dr_agent/web_api/: __init__.py  api.py
agent/scripts/: auto_search.sh  interactive_auto_search.py  launch_chat.py
agent/server/: api.py
agent/tests/: test_chained_tools.py  test_client.py  test_tools.py  test_workflow.py
agent/tests/test_mcp_tools/: test_browsing_tools.py  test_reranker_tools.py  test_search_tools.py
agent/workflows/: auto_search_sft.py  auto_search_sft.yaml
app/: global.d.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
app/public/images/institutions/: README.md
app/python/: .gitignore  README.md  pyproject.toml
app/python/dr_agent_ui/: __init__.py  server.py
app/scripts/: build_ui.sh  publish_to_pypi.sh
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/lib/: sse.ts
rl/open-instruct/: Dockerfile  README.md  convert_rar_data.py  launch_ray_slurm.sh  pyproject.toml  requirements.txt  train_dr_tulu.sh  train_dr_tulu_jina.sh  train_dr_tulu_jina_single_node.sh  train_dr_tulu_mini_base.sh
rl/open-instruct/open_instruct/: fgrpo_fast.py  grpo_fast.py  grpo_fast_rubric.py  model_utils.py  ppo_fast.py
rl/open-instruct/open_instruct/search_utils/: mcp_tools.py  toolvllm_search_generate_mcp.py
sft/llama-factory/: .gitignore  README.md  requirements.txt
sft/llama-factory/data/: dataset_info.json
sft/llama-factory/src/llamafactory/data/: loader.py
sft/llama-factory/src/llamafactory/data/processor/: __init__.py
sft/llama-factory/src/llamafactory/extras/: logging.py
sft/llama-factory/src/llamafactory/hparams/: data_args.py  parser.py
sft/llama-factory/train/: qwen3-8B-sft-final.yaml  train.sh
